# oct_analysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  collab.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
andylib/: __init__.py  image_processing.py
docs/: changelog.rst  conf.py  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
examples/: example.py  example_C-PP.py  example_PVC.py  example_Postprocessing.py
setup/: setup_dev.ps1  setup_user.ps1
src/ebi_oct/octools/: __init__.py  processing_functions.py
src/gui/: gui.py
src/labeling_gui/: main.py  ui_widgets.py  utils.py
src/ml/: datasets.py  ml_datasets.py  test_model.py  train_model.py
src/napari_oct_plugin/: main.py  ui_widgets.py
src/oct_analysis/: __init__.py  image_processing.py  main.py  ml_datasets.py  processing_functions.py  test_model.py  train_model.py  ui_widgets.py
src/oct_analysis/napari_plugin/: __init__.py  napari.yaml  widgets.py
src/oct_analysis/octools/: __init__.py  processing_functions.py
src/processing_functions/: __init__.py  image_processing.py
src/webapp/: app.py
src/webapp/templates/: index.html
tests/: __init__.py  test_image_processing.py
