[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[project]
name = "oct_analysis"
version = "1.0.0"
description = "A package for analyzing optical coherence tomography (OCT) images for biofilm."
authors = [
  {name = "Andreas Netsch", email = "andreas.netsch@partner.kit.edu"},
  {name = "Jonas Ullmann", email = "ullmann@dvgw-ebi.de"}
]
readme = "README.md"
requires-python = ">=3.6, <3.13"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.20.0",
  "opencv-python>=4.5.0",
  "matplotlib>=3.4.0",
  "tifffile>=2020.6.3",
  "pytest>=6.0.0",
  "flake8>=4.0.0",
  "customtkinter>=5.2.0",
  "scikit-image>=0.21.0",
]


[project.optional-dependencies]
dev = [
  "albucore==0.0.24",
  "albumentations==2.0.6",
  "annotated-types==0.7.0",
  "certifi==2025.4.26",
  "charset-normalizer==3.4.1",
  "colorama==0.4.6",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "filelock==3.18.0",
  "fonttools==4.57.0",
  "fsspec==2025.3.2",
  "huggingface-hub==0.30.2",
  "idna==3.10",
  "Jinja2==3.1.6",
  "kiwisolver==1.4.8",
  "lightning-utilities==0.14.3",
  "MarkupSafe==3.0.2",
  "matplotlib==3.10.1",
  "mpmath==1.3.0",
  "networkx==3.4.2",
  "numpy==2.2.5",
  "opencv-python-headless==4.11.0.86",
  "packaging==25.0",
  "pillow==11.2.1",
  "pydantic==2.11.3",
  "pydantic_core==2.33.1",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.2",
  "requests==2.32.3",
  "safetensors==0.5.3",
  "scipy==1.15.2",
  "segmentation_models_pytorch==0.5.0",
  "setuptools==80.0.0",
  "simsimd==6.2.1",
  "six==1.17.0",
  "stringzilla==3.12.5",
  "sympy==1.14.0",
  "timm==1.0.15",
  "torch==2.7.0",
  "torchmetrics==1.7.1",
  "torchvision==0.22.0",
  "tqdm==4.67.1",
  "typing-inspection==0.4.0",
  "typing_extensions==4.13.2",
  "urllib3==2.4.0",
]

[tool.uv]
dev-dependencies = ["dev"]