[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "oct_analysis"
version = "1.0.1"
description = "A package for analyzing optical coherence tomography (OCT) images for biofilm."
authors = [
  {name = "Andreas Netsch", email = "andreas.netsch@partner.kit.edu"},
  {name = "Jonas Ullmann", email = "ullmann@dvgw-ebi.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11, <3.13"
dependencies = [
  "numpy>=1.20.0",
  "magicgui>=0.9.2",
  "qtpy>=2.4.0",
  "scipy>=1.13.0",
  "torch==2.7.0",
  "pillow>=11.2.0",
  "segmentation-models-pytorch>=0.5.0",
  "opencv-python>=4.5.0",
  "matplotlib>=3.4.0",
  "tifffile>=2020.6.3",
  "customtkinter>=5.2.0",
  "scikit-image>=0.21.0",
  "napari>=0.6.1",
]

[project.optional-dependencies]
dev = [
  "ruff==0.12.0",
  "pre-commit==4.2.0",
  "sphinx==8.2.3",
  "sphinx-rtd-theme==3.0.2",
  "sphinx-autodoc-typehints==3.2.0",
  "pytest==8.4.0",
  "torchmetrics==1.7.1",
  "torchvision==0.22.0",
  "albumentations==2.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ['E', 'F', 'B']
exclude = [".git", ".venv", "__pycache__", "build", "dist", "docs"]

[tool.ruff.format]
quote-style = 'double'
indent-style = 'tab'
line-ending = 'auto'

[tool.uv]
dev-dependencies = ["oct_analysis[dev]"]
